--- a/package.json
+++ b/package.json
@@ -19,14 +19,20 @@
   },
   "homepage": "https://github.com/kazi-arafat/store-api#readme",
   "dependencies": {
+    "@prisma/client": "^4.5.0",
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.2",
     "concurrently": "^7.4.0",
     "nodemon": "^2.0.20",
+    "prisma": "^4.5.0",
     "typescript": "^4.8.4"
   }
 }
